src/BulletSharpPInvoke/Dynamics/WheelInfo.cs


        [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern IntPtr btWheelInfo_RaycastInfo_new();
        [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern void btWheelInfo_RaycastInfo_getContactNormalWS(IntPtr obj, [Out] out Vector3 value);
        [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern void btWheelInfo_RaycastInfo_getContactPointWS(IntPtr obj, [Out] out Vector3 value);
        [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern IntPtr btWheelInfo_RaycastInfo_getGroundObject(IntPtr obj);
        [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern void btWheelInfo_RaycastInfo_getHardPointWS(IntPtr obj, [Out] out Vector3 value);
        [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern bool btWheelInfo_RaycastInfo_getIsInContact(IntPtr obj);
        [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern float btWheelInfo_RaycastInfo_getSuspensionLength(IntPtr obj);
        [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern void btWheelInfo_RaycastInfo_getWheelAxleWS(IntPtr obj, [Out] out Vector3 value);
        [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern void btWheelInfo_RaycastInfo_getWheelDirectionWS(IntPtr obj, [Out] out Vector3 value);
        [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern void btWheelInfo_RaycastInfo_setContactNormalWS(IntPtr obj, [In] ref Vector3 value);
        [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern void btWheelInfo_RaycastInfo_setContactPointWS(IntPtr obj, [In] ref Vector3 value);
        [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern void btWheelInfo_RaycastInfo_setGroundObject(IntPtr obj, IntPtr value);
        [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern void btWheelInfo_RaycastInfo_setHardPointWS(IntPtr obj, [In] ref Vector3 value);
        [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern void btWheelInfo_RaycastInfo_setIsInContact(IntPtr obj, bool value);
        [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern void btWheelInfo_RaycastInfo_setSuspensionLength(IntPtr obj, float value);
        [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern void btWheelInfo_RaycastInfo_setWheelAxleWS(IntPtr obj, [In] ref Vector3 value);
        [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern void btWheelInfo_RaycastInfo_setWheelDirectionWS(IntPtr obj, [In] ref Vector3 value);
        [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern void btWheelInfo_RaycastInfo_delete(IntPtr obj);
    }

	public class WheelInfo
	{
		internal IntPtr _native;
        bool _preventDelete;

		internal WheelInfo(IntPtr native, bool preventDelete = true)
		{
			_native = native;
            _preventDelete = preventDelete;
		}

		public WheelInfo(WheelInfoConstructionInfo ci)
		{
			_native = btWheelInfo_new(ci._native);
		}

		public void UpdateWheel(RigidBody chassis, RaycastInfo raycastInfo)
		{
			btWheelInfo_updateWheel(_native, chassis._native, raycastInfo._native);
		}

		public bool IsFrontWheel
		{
			get { return btWheelInfo_getBIsFrontWheel(_native); }
			set { btWheelInfo_setBIsFrontWheel(_native, value); }
		}

		public float Brake
		{
			get { return btWheelInfo_getBrake(_native); }
			set { btWheelInfo_setBrake(_native, value); }
		}

        public Vector3 ChassisConnectionPointCS
		{
            get
			{
				Vector3 value;
				btWheelInfo_getChassisConnectionPointCS(_native, out value);
				return value;
			}
			set { btWheelInfo_setChassisConnectionPointCS(_native, ref value); }
		}

		public IntPtr ClientInfo
		{
			get { return btWheelInfo_getClientInfo(_native); }
			set { btWheelInfo_setClientInfo(_native, value); }
		}

		public float ClippedInvContactDotSuspension
		{
			get { return btWheelInfo_getClippedInvContactDotSuspension(_native); }
			set { btWheelInfo_setClippedInvContactDotSuspension(_native, value); }
		}

		public float DeltaRotation
		{
			get { return btWheelInfo_getDeltaRotation(_native); }
			set { btWheelInfo_setDeltaRotation(_native, value); }
		}

		public float EngineForce
		{
			get { return btWheelInfo_getEngineForce(_native); }
			set { btWheelInfo_setEngineForce(_native, value); }
		}

		public float FrictionSlip
		{
			get { return btWheelInfo_getFrictionSlip(_native); }
			set { btWheelInfo_setFrictionSlip(_native, value); }
		}

		public float MaxSuspensionForce
		{
			get { return btWheelInfo_getMaxSuspensionForce(_native); }
			set { btWheelInfo_setMaxSuspensionForce(_native, value); }
		}

		public float MaxSuspensionTravelCm
		{
			get { return btWheelInfo_getMaxSuspensionTravelCm(_native); }
			set { btWheelInfo_setMaxSuspensionTravelCm(_native, value); }
		}

		public RaycastInfo RaycastInfo
		{
            get { return new RaycastInfo(btWheelInfo_getRaycastInfo(_native)); }
			set { btWheelInfo_setRaycastInfo(_native, value._native); }
		}

		public float RollInfluence
		{
			get { return btWheelInfo_getRollInfluence(_native); }
			set { btWheelInfo_setRollInfluence(_native, value); }
		}

		public float Rotation
		{
			get { return btWheelInfo_getRotation(_native); }
			set { btWheelInfo_setRotation(_native, value); }
		}

		public float SkidInfo
		{
			get { return btWheelInfo_getSkidInfo(_native); }
			set { btWheelInfo_setSkidInfo(_native, value); }
		}

		public float Steering
		{
			get { return btWheelInfo_getSteering(_native); }
			set { btWheelInfo_setSteering(_native, value); }
		}

		public float SuspensionRelativeVelocity
		{
			get { return btWheelInfo_getSuspensionRelativeVelocity(_native); }
			set { btWheelInfo_setSuspensionRelativeVelocity(_native, value); }
		}

		public float SuspensionRestLength
		{
			get { return btWheelInfo_getSuspensionRestLength(_native); }
		}

		public float SuspensionRestLength1
		{
			get { return btWheelInfo_getSuspensionRestLength1(_native); }
			set { btWheelInfo_setSuspensionRestLength1(_native, value); }
		}

		public float SuspensionStiffness
		{
			get { return btWheelInfo_getSuspensionStiffness(_native); }
			set { btWheelInfo_setSuspensionStiffness(_native, value); }
		}

        public Vector3 WheelAxleCS
		{
            get
			{
				Vector3 value;
				btWheelInfo_getWheelAxleCS(_native, out value);
				return value;
			}
			set { btWheelInfo_setWheelAxleCS(_native, ref value); }
		}

        public Vector3 WheelDirectionCS
		{
            get
			{
				Vector3 value;
				btWheelInfo_getWheelDirectionCS(_native, out value);
				return value;
			}
			set { btWheelInfo_setWheelDirectionCS(_native, ref value); }
		}

		public float WheelsDampingCompression
		{
			get { return btWheelInfo_getWheelsDampingCompression(_native); }
			set { btWheelInfo_setWheelsDampingCompression(_native, value); }
		}

		public float WheelsDampingRelaxation
		{
			get { return btWheelInfo_getWheelsDampingRelaxation(_native); }
			set { btWheelInfo_setWheelsDampingRelaxation(_native, value); }
		}

		public float WheelsRadius
		{
			get { return btWheelInfo_getWheelsRadius(_native); }
			set { btWheelInfo_setWheelsRadius(_native, value); }
		}

		public float WheelsSuspensionForce
		{
			get { return btWheelInfo_getWheelsSuspensionForce(_native); }
			set { btWheelInfo_setWheelsSuspensionForce(_native, value); }
		}

		public Matrix WorldTransform
		{
            get
			{
				Matrix value;
				btWheelInfo_getWorldTransform(_native, out value);
				return value;
			}
			set { btWheelInfo_setWorldTransform(_native, ref value); }
		}

		public void Dispose()
		{
			Dispose(true);
			GC.SuppressFinalize(this);
		}

		protected virtual void Dispose(bool disposing)
		{
			if (_native != IntPtr.Zero)
			{
                if (!_preventDelete)
                {
                    btWheelInfo_delete(_native);
                }
				_native = IntPtr.Zero;
			}
		}

		~WheelInfo()
		{
			Dispose(false);
		}
